[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/game/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/game.gd" type="Script" id=2]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game/catcher.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/music/level1.ogg" type="AudioStream" id=5]
[ext_resource path="res://scenes/enemies/enemy_spawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/game/bunker.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/cards/card_spawner.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 518.5 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Catcher" parent="." instance=ExtResource( 4 )]
position = Vector2( 385, -49 )

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 365, 989 )

[node name="EnemySpawner" parent="." instance=ExtResource( 6 )]

[node name="CardSpawner" parent="." groups=["cards"] instance=ExtResource( 8 )]
position = Vector2( 5, 9 )

[node name="GameTime" type="Timer" parent="."]
autostart = true

[node name="Walls" type="Node" parent="."]

[node name="Left" type="Area2D" parent="Walls"]
position = Vector2( 0, 510 )
collision_layer = 32
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Left"]
shape = SubResource( 1 )

[node name="Right" type="Area2D" parent="Walls"]
position = Vector2( 768, 510 )
collision_layer = 32
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Right"]
shape = SubResource( 1 )

[node name="Bunker" parent="Walls" instance=ExtResource( 7 )]
position = Vector2( 383, 1026 )

[node name="Level1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -11.361
autoplay = true

[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="timeout" from="GameTime" to="." method="_on_GameTime_timeout"]
[connection signal="area_entered" from="Walls/Left" to="EnemySpawner" method="_on_left_area_entered"]
[connection signal="area_entered" from="Walls/Right" to="EnemySpawner" method="_on_right_area_entered"]
[connection signal="trampled" from="Walls/Bunker" to="." method="_on_Bunker_trampled"]
